fix project slider spacing

--- a/themes/sacre-davey/style.css
+++ b/themes/sacre-davey/style.css
@@ -1582,7 +1582,7 @@ footer {
       font-weight: 100; }
   .projects-block-info p {
     font-size: 20px;
-    line-height: 1.3;
+    line-height: 2;
     position: absolute;
     right: 0;
     bottom: 8%;
@@ -1592,8 +1592,7 @@ footer {
     @media (min-width: 600px) {
       .projects-block-info p {
         width: 50%;
-        bottom: 12%;
-        line-height: 2; } }
+        bottom: 12%; } }
 
 .partners {
   background-color: lightgray;
